force-app/main/default/objects/sma__MABaseObject__c/sma__MABaseObject__c.object-meta.xml
<CustomObject>
    <label>MapAnything Base Object</label>
    <nameField>
        <label>Base Object</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Base Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>