force-app/main/default/objects/sma__MABaseObject__c/fields/sma__AutoAssignmentDirtyFlag__c.field-meta.xml
<CustomField>
    <fullName>sma__AutoAssignmentDirtyFlag__c</fullName>
    <label>Auto Assignment Dirty Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>