force-app/main/default/objects/sma__MABaseObject__c/fields/sma__BatchSize__c.field-meta.xml
<CustomField>
    <fullName>sma__BatchSize__c</fullName>
    <defaultValue>50</defaultValue>
    <label>Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>