force-app/main/default/objects/sma__MABaseObject__c/fields/sma__CleanCity__c.field-meta.xml
<CustomField>
    <fullName>sma__CleanCity__c</fullName>
    <label>Clean City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>