force-app/main/default/objects/sma__MABaseObject__c/fields/sma__CleanCountry__c.field-meta.xml
<CustomField>
    <fullName>sma__CleanCountry__c</fullName>
    <label>Clean Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>