force-app/main/default/objects/sma__MABaseObject__c/fields/sma__CleanCounty__c.field-meta.xml
<CustomField>
    <fullName>sma__CleanCounty__c</fullName>
    <label>Clean County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>