force-app/main/default/objects/sma__MABaseObject__c/fields/sma__CleanPostalCode__c.field-meta.xml
<CustomField>
    <fullName>sma__CleanPostalCode__c</fullName>
    <label>Clean Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>