force-app/main/default/objects/sma__MABaseObject__c/fields/sma__CleanState__c.field-meta.xml
<CustomField>
    <fullName>sma__CleanState__c</fullName>
    <label>Clean State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>