force-app/main/default/objects/sma__MABaseObject__c/fields/sma__CleanStreet__c.field-meta.xml
<CustomField>
    <fullName>sma__CleanStreet__c</fullName>
    <label>Clean Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>