force-app/main/default/objects/sma__MABaseObject__c/fields/sma__Country__c.field-meta.xml
<CustomField>
    <fullName>sma__Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>