force-app/main/default/objects/sma__MABaseObject__c/fields/sma__DeviceId__c.field-meta.xml
<CustomField>
    <fullName>sma__DeviceId__c</fullName>
    <label>Device Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>