force-app/main/default/objects/sma__MABaseObject__c/fields/sma__DeviceType__c.field-meta.xml
<CustomField>
    <fullName>sma__DeviceType__c</fullName>
    <label>Device Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>