force-app/main/default/objects/sma__MABaseObject__c/fields/sma__DeviceVendor__c.field-meta.xml
<CustomField>
    <fullName>sma__DeviceVendor__c</fullName>
    <label>Device Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>