force-app/main/default/objects/sma__MABaseObject__c/fields/sma__DisableGlobalSearch__c.field-meta.xml
<CustomField>
    <fullName>sma__DisableGlobalSearch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables searching for records inside MapAnything with this Base Object.</description>
    <label>Disable Global Search</label>
    <type>Checkbox</type>
</CustomField>