force-app/main/default/objects/sma__MABaseObject__c/fields/sma__LastUpdated__c.field-meta.xml
<CustomField>
    <fullName>sma__LastUpdated__c</fullName>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>