force-app/main/default/objects/sma__MABaseObject__c/fields/sma__Longitude__c.field-meta.xml
<CustomField>
    <fullName>sma__Longitude__c</fullName>
    <label>Longitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>