force-app/main/default/objects/sma__MABaseObject__c/fields/sma__MapIt_Proximity_Measurement_Unit__c.field-meta.xml
<CustomField>
    <fullName>sma__MapIt_Proximity_Measurement_Unit__c</fullName>
    <label>MapIt Proximity Measurement Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meters</fullName>
            </value>
            <value>
                <fullName>Kilometers</fullName>
            </value>
            <value>
                <fullName>Miles</fullName>
            </value>
            <value>
                <fullName>Feet</fullName>
            </value>
            <value>
                <fullName>Yards</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>