force-app/main/default/objects/sma__MABaseObject__c/fields/sma__MapIt_Proximity_On__c.field-meta.xml
<CustomField>
    <fullName>sma__MapIt_Proximity_On__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MapIt Proximity On</label>
    <type>Checkbox</type>
</CustomField>