force-app/main/default/objects/sma__MABaseObject__c/fields/sma__MapIt_Show_Inside_Shape__c.field-meta.xml
<CustomField>
    <fullName>sma__MapIt_Show_Inside_Shape__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MapIt Show Inside Shape</label>
    <type>Checkbox</type>
</CustomField>