force-app/main/default/objects/sma__MABaseObject__c/fields/sma__Name__c.field-meta.xml
<CustomField>
    <fullName>sma__Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>