force-app/main/default/objects/sma__MABaseObject__c/fields/sma__PostalCode__c.field-meta.xml
<CustomField>
    <fullName>sma__PostalCode__c</fullName>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>