force-app/main/default/objects/sma__MABaseObject__c/fields/sma__PriorityType__c.field-meta.xml
<CustomField>
    <fullName>sma__PriorityType__c</fullName>
    <label>Priority Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Einstein</fullName>
            </value>
            <value>
                <fullName>Pardot</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>