force-app/main/default/objects/sma__MABaseObject__c/fields/sma__Quality__c.field-meta.xml
<CustomField>
    <fullName>sma__Quality__c</fullName>
    <label>Quality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>