force-app/main/default/objects/sma__MABaseObject__c/fields/sma__RoutingEndTime__c.field-meta.xml
<CustomField>
    <fullName>sma__RoutingEndTime__c</fullName>
    <label>Routing End Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>