force-app/main/default/objects/sma__MABaseObject__c/fields/sma__RoutingHasAddress__c.field-meta.xml
<CustomField>
    <fullName>sma__RoutingHasAddress__c</fullName>
    <label>Routing Has Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>