force-app/main/default/objects/sma__MABaseObject__c/fields/sma__RoutingIsFlexible__c.field-meta.xml
<CustomField>
    <fullName>sma__RoutingIsFlexible__c</fullName>
    <label>Routing Is Flexible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>