force-app/main/default/objects/sma__MABaseObject__c/fields/sma__RoutingStartTime__c.field-meta.xml
<CustomField>
    <fullName>sma__RoutingStartTime__c</fullName>
    <label>Routing Start Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>