force-app/main/default/objects/sma__MABaseObject__c/fields/sma__Settings__c.field-meta.xml
<CustomField>
    <fullName>sma__Settings__c</fullName>
    <label>Settings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>