force-app/main/default/objects/sma__MABaseObject__c/fields/sma__Shape__c.field-meta.xml
<CustomField>
    <fullName>sma__Shape__c</fullName>
    <description>This field is used to store lookup field names to MapAnything territories which can be set up for Geofence Layers.</description>
    <label>Shape</label>
    <length>255</length>
    <type>Text</type>
</CustomField>