force-app/main/default/objects/sma__MABaseObject__c/fields/sma__SkipFailedGeocodes__c.field-meta.xml
<CustomField>
    <fullName>sma__SkipFailedGeocodes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Failed Geocodes</label>
    <type>Checkbox</type>
</CustomField>