force-app/main/default/objects/sma__MABaseObject__c/fields/sma__State__c.field-meta.xml
<CustomField>
    <fullName>sma__State__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>