force-app/main/default/objects/sma__MABaseObject__c/fields/sma__testLat__c.field-meta.xml
<CustomField>
    <fullName>sma__testLat__c</fullName>
    <label>testLat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>