force-app/main/default/objects/sma__MABaseObject__c/fields/sma__Tooltip12__c.field-meta.xml
<CustomField>
    <fullName>sma__Tooltip12__c</fullName>
    <label>Tooltip Twelve</label>
    <length>255</length>
    <type>Text</type>
</CustomField>