force-app/main/default/objects/sma__MABaseObject__c/fields/sma__Tooltip14__c.field-meta.xml
<CustomField>
    <fullName>sma__Tooltip14__c</fullName>
    <label>Tooltip Fourteen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>