force-app/main/default/objects/sma__MABaseObject__c/fields/sma__Tooltip15__c.field-meta.xml
<CustomField>
    <fullName>sma__Tooltip15__c</fullName>
    <label>Tooltip Fifteen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>