force-app/main/default/objects/sma__MABaseObject__c/fields/sma__VerifiedLatitude__c.field-meta.xml
<CustomField>
    <fullName>sma__VerifiedLatitude__c</fullName>
    <label>Verified Latitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>