force-app/main/default/objects/sma__MABaseObject__c/fields/sma__VerifiedLongitude__c.field-meta.xml
<CustomField>
    <fullName>sma__VerifiedLongitude__c</fullName>
    <label>Verified Longitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>