force-app/main/default/objects/sma__MABaseObject__c/listViews/sma__All.listView-meta.xml
<ListView>
    <fullName>sma__All</fullName>
    <columns>NAME</columns>
    <columns>sma__Name__c</columns>
    <columns>sma__Processing__c</columns>
    <columns>sma__AddressObject__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>